modify html and gitignore

--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>The World of Nayllah Buteau</h1>
+
+    <Section>
+        <h2>Background</h2>
+        <p>
+            Hello! My name is Nayllah Buteau and this is my first semester in the MAMC graduate program at the University of Florida. 
+            I received my B.S.B.A in Marketing at the University of Central Florida in December of 2023 and later received a full time offer
+            to work at a media agency (which I currently work for) where I focus on the digital investment of media campaigns.
+        </p>
+        <img src="NayllahB.jpg" height="275" width="220" alt="A picture of Nayllah Buteau">
+    </Section>
+    
+    <Section>
+        <h2>Hobbies</h2>
+        <h4>Here is a list of a few hobbies I enjoy on my downtime:</h4>
+        <ul>
+            <li>Reading</li>
+            <li>Watching Movies & TV shows</li>
+            <li>Traveling</li>
+            <li>Listening to Music</li>
+        </ul>
+    </Section>
+
+    <Section>
+        <h2>Interests</h2>
+        <p>
+            As I grow older, there are always new topics that gain my interest. My overall career interest is learning about the world of
+            web design and understanding what it takes to build a functional yet cool website that many can enjoy. I also have a interest in Music and
+            learning how to play new instruments. I played the violin, Alto Saxophone, and piano throughout my childhood and have been wanting to learning
+            new instruments like the guitar.
+        </p>
+
+    </Section>
+
+    <Section>
+        <h2>Career Goals</h2>
+
+        <p>My current career goal is to work in the field of UX design where I can help design/develop websites that create a great user experience!
+            In order to acheive this, I have set up a few smaller career goals that will help lead me to my overall end goal. This includes:
+        </p>
+
+        <ul>
+            <li>Learning how to build functional responsive websites</li>
+            <li>Learning and understanding UX theory</li>
+            <li>Graduating with M.A.M.C in Web Design</li>
+        </ul>
+    </Section>
+    
+    <h3>If you would like to learn more, feel free to check out my Linkedin linked below!</h3>
+    <a href="https://www.linkedin.com/in/nayllahbuteau/" target="_blank">My Linkedin</a>
+
+</body>
+</html>
