--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>The World of Nayllah Buteau</h1>
 
-    <Section>
+    <section>
         <h2>Background</h2>
         <p>
             Hello! My name is Nayllah Buteau and this is my first semester in the MAMC graduate program at the University of Florida. 
@@ -17,9 +17,9 @@
             to work at a media agency (which I currently work for) where I focus on the digital investment of media campaigns.
         </p>
         <img src="NayllahB.jpg" height="275" width="220" alt="A picture of Nayllah Buteau">
-    </Section>
+    </section>
     
-    <Section>
+    <section>
         <h2>Hobbies</h2>
         <h4>Here is a list of a few hobbies I enjoy on my downtime:</h4>
         <ul>
@@ -28,9 +28,9 @@
             <li>Traveling</li>
             <li>Listening to Music</li>
         </ul>
-    </Section>
+    </section>
 
-    <Section>
+    <section>
         <h2>Interests</h2>
         <p>
             As I grow older, there are always new topics that gain my interest. My overall career interest is learning about the world of
@@ -39,9 +39,9 @@
             new instruments like the guitar.
         </p>
 
-    </Section>
+    </section>
 
-    <Section>
+    <section>
         <h2>Career Goals</h2>
 
         <p>My current career goal is to work in the field of UX design where I can help design/develop websites that create a great user experience!
@@ -53,7 +53,7 @@
             <li>Learning and understanding UX theory</li>
             <li>Graduating with M.A.M.C in Web Design</li>
         </ul>
-    </Section>
+    </section>
     
     <h3>If you would like to learn more, feel free to check out my Linkedin linked below!</h3>
     <a href="https://www.linkedin.com/in/nayllahbuteau/" target="_blank">My Linkedin</a>
