--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             I received my B.S.B.A in Marketing at the University of Central Florida in December of 2023 and later received a full time offer
             to work at a media agency (which I currently work for) where I focus on the digital investment of media campaigns.
         </p>
-        <img src="NayllahB.jpg" height="275" width="220" alt="A picture of Nayllah Buteau">
+        <img src="NayllahB.jpg" alt="A picture of Nayllah Buteau">
     </section>
     
     <section>
